# s3-pypi-hub

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
infra/: main.tf  outputs.tf  variables.tf
mypackage/: __init__.py  _version.py
server/: .htpasswd  .htpasswd.example  .pypirc.example  auth.sh  docker-compose.yaml
testpackage/: greet.py  pyproject.toml  pytest.ini
testpackage/tests/: test_greet.py
