[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "mypackage/_version.py"

[project]
name = "test-package"
dynamic = ["version"]
description = "A simple test package for uploading to private PyPI servers"
authors = [
    {name = "Test Author", email = "test@example.com"},
]
dependencies = []
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/jibbs1703/s3-pypi-hub"
Repository = "https://github.com/jibbs1703/s3-pypi-hub"

[tool.setuptools.packages.find]
where = ["mypackage"]