[project]
name = "testpackage"
dynamic = ["version"]
description = "A testpackage to demonstrate a private pypi server"
keywords = ["testpackage", "pypi-server"]
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Abraham Ajibade", email = "abraham0ajibade@gmail.com"}]
maintainers = [{name = "Abraham Ajibade", email = "abraham0ajibade@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["python-dotenv==1.0.1"]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.4",
    "ruff>=0.14.0",
]

[project.scripts]
greet = "testpackage.greet:Greet"

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
write_to = "testpackage/_version.py"